<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

    <TextView
        android:id="@+id/stickerDirStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_info"
        style="@style/widget"
        />

    <TextView
        android:id="@+id/stickerDirStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/widget"
        />

    <Button
        android:id="@+id/chooseStickerDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_dir"
        android:onClick="chooseDir"
        style="@style/widget"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        style="@style/widget"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/backButtonToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showBackButton"
        style="@style/widget"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/animateGlide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animateGlide"
        style="@style/widget"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/widget"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons_per_row_status" />

        <TextView
            android:id="@+id/iconsPerRowValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/iconsPerRowSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:min="1"
            android:progress="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/widget"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_size_status" />

        <TextView
            android:id="@+id/iconSizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/iconSizeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="32"
            android:min="8"
            android:progress="16"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        style="@style/widget"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/github"
        style="@style/widget"
        />

</LinearLayout>